♿️ fix color contrast issues

--- a/static/global.css
+++ b/static/global.css
@@ -4,6 +4,7 @@
   --z-grey: #292929;
   --z-blue: #414bb2;
   --z-red: #ee2238;
+  --z-red-dark: #ae1929;
 
   --text-size-xxl: 4rem;
   --text-size-xl: 3rem;
